--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -5,7 +5,27 @@
   <div class="page-header">
     <h1>Edit Profile</h1>
   </div>
+ 
+<div class="title">
+      <div class="tab-container">
+        <span class="tab-button icon icon ion-ios-home"></span>
+        <span class="tab">Future Hikes</span>
+      </div>
+      <div class="tab-container">
+          <span class="icon icon ion-image"></span>
+          <span class="tab">Offline Guides</span>
+      </div>
+      <div class="tab-container">
+        <span class="icon icon ion-map"></span>
+        <span class="tab">Past Hikes</span>
+      </div>
+      <div class="tab-container">
+          <span class="icon icon ion-search"></span>
+          <span class="tab">Your Reviews</span>
+      </div>
 
+  </div>
+ 
   <form ng-submit="profileCtrl.updateProfile()">
     <p ng-hide="profileCtrl.profile.displayName">
       You'll need a display name before you can start chatting.
