--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -9,8 +9,8 @@
  		<div class="item item-avatar" ng-repeat="guide in values" ng-click="openGuide(guide)">
  			<img srcset="{{guide.image_descriptions[0].URL}}" >
  		
- 		<h2>{{guide.name_description}}</h2>
- 		<p>{{guide.closest_to}}</p>	
+ 		<h2 style="color:white">{{guide.name_description}}</h2>
+ 		<p style="color:white">{{guide.closest_to}}</p>	
  		</div>
  	
  	</ion-list>
