--- a/www/css/style.css
+++ b/www/css/style.css
@@ -13,7 +13,23 @@ img {
   height: 50%;
   background-color: black;
 }
-
+.bar-subheader, .bar, .bar-stable, .bar-header, .title{
+	background-color:#2ebbbe!important;
+	color:white!important;
+	
+}
+.title, .header-item{
+	color:white;
+}
+.tab-nav, .tabs{
+	background-color:#2ebbbe;
+}
+ion-tabs.tabs-color-active-positive .tab-item.tab-item-active, ion-tabs.tabs-color-active-positive .tab-item.active, ion-tabs.tabs-color-active-positive .tab-item.activated{
+	color:white!important;
+}
+.item, .item-avatar{
+	background-color:#d3d3d3;
+}
 .image{
   	width: 100%;
   	height: 300px;
@@ -21,7 +37,9 @@ img {
   	background-repeat: no-repeat;
   	background-position: center, center;
 }
-
+#profile-picture{
+	height:150px;
+}
 .guide-header{
 	color: #696969;
 	text-align: center
@@ -56,7 +74,7 @@ img {
     display: inline-block;
     text-align: center;
     width: 24%;
-   
+
  
   border: 1px solid #ccc;
   border-radius: 6px;
