--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -2,10 +2,10 @@
 <ion-content>
 <div class="page-wrapper">
 
-  <div class="page-header">
-    <h1>Edit Profile</h1>
-  </div>
- 
+
+<div id="profile-picture">
+
+</div> 
 <div class="title">
       <div class="tab-container">
         <span class="tab-button icon icon ion-ios-home"></span>
