--- a/www/templates/guide.html
+++ b/www/templates/guide.html
@@ -1,4 +1,4 @@
-<ion-view hide-nav-bar="true" ng-controller="GuideCtrl" >
+<ion-view hide-nav-bar="true"  >
 <!-- 
  <ion-header-bar>
  <div class="title">
@@ -17,7 +17,7 @@
     <div class="title">
     {{data.name_description}}
     </div>
-    <button ng-click="back()">Back</button>
+    <button class="button-clear button-primary" ng-click="back()">Back</button>
     </ion-header-bar>
      <ion-header-bar id="map-header" ng-show="displayMap" ng-click="closeMap()">
          <div class="title">
@@ -49,5 +49,28 @@
    <div ng-repeat="guide in data.similar_hikes">
       <img ng-click="openGuide(guide)" src="{{globalData.guides[guide].image_descriptions[0].URL}}"/>
    </div>
+  
 </ion-content>
+   <div class="guide-bottom-bar">
+   <div class="title">
+      <div class="tab-container-3" ng-click="addToFuture()" ng-show="profile.future.indexOf(data.name)==-1">
+        <span class="tab-button icon icon ion-ios-home"></span>
+        <span class="tab">Add to Future Hikes</span>
+      </div>
+      <div class="tab-container-3" ng-click="addToFuture()" ng-show="profile.future.indexOf(data.name)!=-1">
+        <span class="tab-button icon icon ion-ios-home"></span>
+        <span class="tab">Remove From Future Hikes</span>
+      </div>
+      <div class="tab-container-3">
+          <span class="icon icon ion-image"></span>
+          <span class="tab">Download Guide</span>
+      </div>
+      <div class="tab-container-3" ng-click="openModal()">
+        <span class="icon icon ion-map"></span>
+        <span class="tab">Check In</span>
+      </div>
+     
+
+  </div>
+  </div>
 </ion-view>
