--- a/www/css/style.css
+++ b/www/css/style.css
@@ -18,6 +18,9 @@ img {
 	color:white!important;
 	
 }
+.profile-title{
+	background-color:#d3d3d3!important;
+}
 .bar-subheader{
 	top:0px!important;
 }
