--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Account">
-  <ion-content>
-    
-  </ion-content>
+
+    <div id='map' style="height:475px;top:50px"></div>
+ 
+ 
 </ion-view>
