--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,6 +7,14 @@ img {
 .container{
 	background-color: grey;
 }
+.mapboxgl-marker {
+    background-image: url('https://www.mapbox.com/mapbox-gl-js/assets/washington-monument.jpg');
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+}
 
 .scrollCanvas{
   width: 100%;
