--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -14,6 +14,11 @@ navigation history that also transitions its views in and out.
   <ion-tab title="Search" icon-off="ion-search" icon-on="ion-search" href="#/tab/search">
     <ion-nav-view name="tab-search"></ion-nav-view>
   </ion-tab>
+  <ion-tab title="Route" icon-off="ion-flash" icon-on="ion-flash" href="#/tab/route">
+    <ion-nav-view name="tab-route"></ion-nav-view>
+  </ion-tab>
+
+
 
   <!-- Account Tab -->
   <ion-tab title="Maps" icon-off="ion-map" icon-on="ion-map" href="#/tab/map">
