--- a/www/templates/guide.html
+++ b/www/templates/guide.html
@@ -25,6 +25,7 @@
          </div>
      </ion-header-bar>
 <ion-content>
+<div style="height:55px"></div>
 <img src="{{siteURL}}"  />
 
 <h1 class="guide-header">{{data.location_loc}}</h1>
