--- a/www/templates/homepage.html
+++ b/www/templates/homepage.html
@@ -1,4 +1,9 @@
-<ion-view view-title="Hippie Hikes">
+<ion-view title="HippieHikes">
+<!--    <ion-nav-title>
+        <img class="title-image" src="img/Logo.png" height="25" />
+   </ion-nav-title> -->
+
+</ion-header-bar>
  	<ion-content>
    <div>
       <div class="bar bar-subheader" style="position:relative">
@@ -10,14 +15,6 @@
          <img ng-click="openGuide(guide.name)" src="{{guide.src}}" style="{{guide.style}}"/>
        
       </div>
-      </div>
-   </div>
-   <div>
-      <div class="bar bar-subheader" style="position:relative">
-         <h1 class="title">Favorited</h1>
-      </div>
-   
-      <div>
       </div>
    </div>
    <div>
