--- a/www/templates/route.html
+++ b/www/templates/route.html
@@ -10,7 +10,6 @@
 	
 	<div class="center-item">
 	<button id="recButton" class="rec-button" ng-click="route()"></button>
-
 	</div>
 	</div>
 	<div ng-show="tracking">
@@ -18,16 +17,16 @@
 			<h4 style="color:#2ebbbe">Time Spent Tracking</h4>
 		</div>
 		<div class="center-container">
-			<h5 style="color:#d3d3d3">{{hours}}:{{minutes}}:{{seconds}}s</h5>
+			<h5 style="color:#2ebbbe">{{hours}}:{{minutes}}:{{seconds}}s</h5>
 		</div>
 		<div class="center-container tag-description">
 			<h4 style="color:#2ebbbe">Distance Travelled</h4>
 		</div>
 		<div class="center-container">
-			<h5 style="color:#d3d3d3">{{distance}} miles</h5>
-		</div>
+			<h5 style="color:#2ebbbe">{{distance}} miles</h5>
 		</div>
 	</div>
+	
 
 	
 </ion-content>
